--- a/site/config.toml
+++ b/site/config.toml
@@ -1,4 +1,4 @@
-baseURL = 'http://example.org/'
+baseURL = 'https://uragiristereo.github.io'
 languageCode = 'en-us'
 title = 'My New Hugo Site'
 theme = 'harbor-theme'
